Gatling updates - reduce max thread count to 4x cores - change collection holding active threads to LowGcLinkedList - prevent aux threads staying alive if queue has tasks (ensure we only use aux threads if they are actively given a task)